k8sapi/gatewayapiDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayapi
  template:
    metadata:
      labels:
        app: gatewayapi
    spec:
      containers:
      - name: gatewayapi
        image: delsynn/website:1.7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
