k8sapi/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
