k8sapi/gatewayapiService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatewayapi-service
spec:
  selector:
    app: gatewayapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
