k8sapi/tcplistener.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-listener
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5432
  clusterIP: 10.0.171.239
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
