k8sapi/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute
  namespace: traefik
spec:
  parentRefs:
  - name: traefik-gateway
  rules:
  - backendRefs:
    - name: postgresql
      port: 5432
